--- a/src/Components/Main/Form.css
+++ b/src/Components/Main/Form.css
@@ -6,7 +6,6 @@
 }
 
 .form {
-    max-height: 55vh !important;
     padding: 1rem;
     border: solid black;
     border-radius: 1rem;
